@@ -18,9 +18,11 @@ import mezz.jei.api.runtime.IJeiRuntime;
 import mezz.jei.common.Internal;
 import mezz.jei.common.config.IClientConfig;
 import mezz.jei.common.gui.JeiTooltip;
+import mezz.jei.common.gui.elements.OffsetDrawable;
 import mezz.jei.common.platform.IPlatformRenderHelper;
 import mezz.jei.common.platform.Services;
 import mezz.jei.common.util.ImmutableRect2i;
+import mezz.jei.common.util.MathUtil;
 import mezz.jei.common.util.SafeIngredientUtil;
 import mezz.jei.library.gui.recipes.layout.builder.LegacyTooltipCallbackAdapter;
 import mezz.jei.library.ingredients.DisplayIngredientAcceptor;
@@ -33,7 +35,9 @@ import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.Unmodifiable;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Stream;
 
@@ -44,25 +48,25 @@ public class RecipeSlot implements IRecipeSlotView, IRecipeSlotDrawable {
 	private final ICycler cycler;
 	private final List<IRecipeSlotRichTooltipCallback> tooltipCallbacks;
 	private final @Nullable RendererOverrides rendererOverrides;
-	private final @Nullable IDrawable background;
+	private final @Nullable OffsetDrawable background;
 	private final @Nullable IDrawable overlay;
 	private final @Nullable String slotName;
 	private ImmutableRect2i rect;
 
 	/**
 	 * All ingredients, ignoring focus and visibility
-	 * {@link Optional#empty()} ingredients represent a "blank" drawn ingredient in the rotation.
+	 * null ingredients represent a "blank" drawn ingredient in the rotation.
 	 */
 	@Unmodifiable
-	private final List<Optional<ITypedIngredient<?>>> allIngredients;
+	private final List<@Nullable ITypedIngredient<?>> allIngredients;
 
 	/**
 	 * Displayed ingredients, taking focus and visibility into account.
-	 * {@link Optional#empty()} ingredients represent a "blank" drawn ingredient in the rotation.
+	 * null ingredients represent a "blank" drawn ingredient in the rotation.
 	 */
 	@Unmodifiable
 	@Nullable
-	private List<Optional<ITypedIngredient<?>>> displayIngredients;
+	private List<@Nullable ITypedIngredient<?>> displayIngredients;
 
 	@Nullable
 	private DisplayIngredientAcceptor displayOverrides;
@@ -72,14 +76,14 @@ public class RecipeSlot implements IRecipeSlotView, IRecipeSlotDrawable {
 		ImmutableRect2i rect,
 		ICycler cycler,
 		List<IRecipeSlotRichTooltipCallback> tooltipCallbacks,
-		List<Optional<ITypedIngredient<?>>> allIngredients,
-		@Nullable List<Optional<ITypedIngredient<?>>> focusedIngredients,
-		@Nullable IDrawable background,
+		List<@Nullable ITypedIngredient<?>> allIngredients,
+		@Nullable List<@Nullable ITypedIngredient<?>> focusedIngredients,
+		@Nullable OffsetDrawable background,
 		@Nullable IDrawable overlay,
 		@Nullable String slotName,
 		@Nullable RendererOverrides rendererOverrides
 	) {
-		this.allIngredients = List.copyOf(allIngredients);
+		this.allIngredients = Collections.unmodifiableList(allIngredients);
 		this.background = background;
 		this.overlay = overlay;
 		this.slotName = slotName;
@@ -94,36 +98,49 @@ public class RecipeSlot implements IRecipeSlotView, IRecipeSlotDrawable {
 	@Override
 	public Stream<ITypedIngredient<?>> getAllIngredients() {
 		return this.allIngredients.stream()
-			.flatMap(Optional::stream);
+			.filter(Objects::nonNull);
+	}
+
+	@Override
+	@Unmodifiable
+	public List<@Nullable ITypedIngredient<?>> getAllIngredientsList() {
+		return this.allIngredients;
+	}
+
+	@Override
+	public boolean isEmpty() {
+		return this.allIngredients.isEmpty() || this.allIngredients.stream().allMatch(Objects::isNull);
 	}
 
 	@Override
 	public Optional<ITypedIngredient<?>> getDisplayedIngredient() {
 		if (this.displayOverrides != null) {
-			List<Optional<ITypedIngredient<?>>> overrides = this.displayOverrides.getAllIngredients();
-			return cycler.getCycled(overrides);
+			List<@Nullable ITypedIngredient<?>> overrides = this.displayOverrides.getAllIngredients();
+			@Nullable ITypedIngredient<?> cycled = cycler.getCycled(overrides);
+			return Optional.ofNullable(cycled);
 		}
 		if (this.displayIngredients == null) {
 			this.displayIngredients = calculateDisplayIngredients(this.allIngredients);
 		}
-		return cycler.getCycled(this.displayIngredients);
+		@Nullable ITypedIngredient<?> cycled = cycler.getCycled(this.displayIngredients);
+		return Optional.ofNullable(cycled);
 	}
 
-	private static List<Optional<ITypedIngredient<?>>> calculateDisplayIngredients(List<Optional<ITypedIngredient<?>>> allIngredients) {
+	private static List<@Nullable ITypedIngredient<?>> calculateDisplayIngredients(List<@Nullable ITypedIngredient<?>> allIngredients) {
 		if (allIngredients.isEmpty()) {
 			return List.of();
 		}
 
-		List<Optional<ITypedIngredient<?>>> visibleIngredients = List.of();
+		List<@Nullable ITypedIngredient<?>> visibleIngredients = List.of();
 		boolean hasInvisibleIngredients = false;
 
 		// hide invisible ingredients if there are any
 		// try scanning through all the ingredients without building the list of visible ingredients.
 		// if an invisible ingredient is found, start building the list of visible ingredients
-		IIngredientVisibility ingredientVisibility = Internal.getJeiRuntime().getIngredientVisibility();
+		IIngredientVisibility ingredientVisibility = Internal.getJeiRuntime().getJeiHelpers().getIngredientVisibility();
 		for (int i = 0; i < allIngredients.size() && visibleIngredients.size() < MAX_DISPLAYED_INGREDIENTS; i++) {
-			Optional<ITypedIngredient<?>> ingredient = allIngredients.get(i);
-			boolean visible = ingredient.isEmpty() || ingredientVisibility.isIngredientVisible(ingredient.get());
+			@Nullable ITypedIngredient<?> ingredient = allIngredients.get(i);
+			boolean visible = ingredient == null || ingredientVisibility.isIngredientVisible(ingredient);
 			if (visible) {
 				if (hasInvisibleIngredients) {
 					visibleIngredients.add(ingredient);
@@ -185,12 +202,11 @@ public class RecipeSlot implements IRecipeSlotView, IRecipeSlotDrawable {
 		IIngredientType<T> ingredientType = typedIngredient.getType();
 		IIngredientRenderer<T> ingredientRenderer = getIngredientRenderer(ingredientType);
 		SafeIngredientUtil.getTooltip(tooltip, ingredientManager, ingredientRenderer, typedIngredient);
+		addTagNameTooltip(tooltip, ingredientManager, typedIngredient);
+		addIngredientsToTooltip(tooltip, typedIngredient);
 		for (IRecipeSlotRichTooltipCallback tooltipCallback : this.tooltipCallbacks) {
 			tooltipCallback.onRichTooltip(this, tooltip);
 		}
-
-		addTagNameTooltip(tooltip, ingredientManager, typedIngredient);
-		addIngredientsToTooltip(tooltip, typedIngredient);
 	}
 
 	private <T> List<Component> legacyGetTooltip(ITypedIngredient<T> typedIngredient) {
@@ -352,6 +368,14 @@ public class RecipeSlot implements IRecipeSlotView, IRecipeSlotDrawable {
 	@Override
 	public Rect2i getRect() {
 		return rect.toMutable();
+	}
+
+	@Override
+	public Rect2i getAreaIncludingBackground() {
+		if (background == null) {
+			return rect.toMutable();
+		}
+		return MathUtil.union(rect, background.getArea()).toMutable();
 	}
 
 	@Override
